# nemoasr2pytorch

./: README.md  README_PYPI.md  inference.py  pyproject.toml  requirements.txt
examples/: check_parakeet_tokenizer.py  compare_parakeet_precision.py  debug_compare_with_nemo_parakeet.py  export_from_nemo_to_pt.py  nemo_vad_debug.py  run_parakeet_demo.py  run_vad_demo.py  streaming_from_wav_realtime.py
exports/: frame_vad_multilingual_marblenet_v2.0.pt
nemoasr2pytorch/: __init__.py
nemoasr2pytorch/asr/: __init__.py  api.py
nemoasr2pytorch/asr/streaming/: api.py  constants.py  endpointing.py  greedy_decoder.py  pipeline.py  rnnt_streaming.py  state.py  state_utils.py  text_segment.py
nemoasr2pytorch/audio/: __init__.py  melspectrogram.py
nemoasr2pytorch/conversion/: __init__.py  parakeet_tdt.py  vad.py
nemoasr2pytorch/decoding/: __init__.py  tdt_greedy.py
nemoasr2pytorch/models/: __init__.py
nemoasr2pytorch/models/asr/: __init__.py  conformer.py  parakeet_tdt.py  rnnt.py
nemoasr2pytorch/models/vad/: __init__.py  frame_vad_model.py  marblenet.py
nemoasr2pytorch/text/: __init__.py  tokenizer.py
nemoasr2pytorch/utils/: __init__.py
nemoasr2pytorch/vad/: __init__.py  api.py
